force-app/main/default/objects/Workcomponent_general_settings__mdt/Workcomponent_general_settings__mdt.object-meta.xml
<CustomObject>
    <label>Workcomponent general settings</label>
    <pluralLabel>Workcomponent general settings</pluralLabel>
</CustomObject>