force-app/main/default/objects/Workcomponent_general_settings__mdt/fields/Api_object_name__c.field-meta.xml
<CustomField>
    <fullName>Api_object_name__c</fullName>
    <label>Api object name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>