force-app/main/default/objects/Workcomponent_general_settings__mdt/fields/Component_name__c.field-meta.xml
<CustomField>
    <fullName>Component_name__c</fullName>
    <label>Component name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>