force-app/main/default/objects/Workcomponent_general_settings__mdt/fields/Row_editable_API_field_name__c.field-meta.xml
<CustomField>
    <fullName>Row_editable_API_field_name__c</fullName>
    <description>Pass in field name of field that determines editability of entire row in component.</description>
    <inlineHelpText>Pass in field name of field that determines editability of entire row in component.</inlineHelpText>
    <label>Row editable API field name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>