force-app/main/default/objects/Workcomponent_general_settings__mdt/fields/Rows_editable__c.field-meta.xml
<CustomField>
    <fullName>Rows_editable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether any rows in component are editable. If you want conditional editability, use row editable API field name.</description>
    <inlineHelpText>Determines whether any rows in component are editable. If you want conditional editability, use row editable API field name.</inlineHelpText>
    <label>Rows editable</label>
    <type>Checkbox</type>
</CustomField>