force-app/main/default/objects/Workcomponent_general_settings__mdt/fields/Show_pagination__c.field-meta.xml
<CustomField>
    <fullName>Show_pagination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show pagination</label>
    <type>Checkbox</type>
</CustomField>